[package]
name = "bip300-enforcer-mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bitcoin = { version = "0.32.2", features = ["serde"] }
blake3 = "1.5.3"
borsh = "1.5.1"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
educe = "0.6.0"
either = "1.13.0"
futures = "0.3.30"
hashlink = "0.9.1"
imbl = "3.0.0"
indexmap = "2.4.0"
jsonrpsee = { version = "0.24.3", features = ["macros", "server"] }
lending-iterator = "0.1.7"
nonempty = "0.10.0"
parking_lot = "0.12.3"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zeromq = "0.4.0"

[dependencies.bip300301]
git = "https://github.com/Ash-L2L/bip300301.git"
rev = "4ec0175093b072d4d0a523321b7bb35e3fc96ccf"
features = ["tracing"]

[lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"

[lints.rust]
let_underscore_drop = "deny"
